--- a/index.html
+++ b/index.html
@@ -1,13 +1,99 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>ITNOVAI Marketplace</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <header class="">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">ITNOVAI Market</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Categorías</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section class="hero py-5 bg-light">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 order-md-1">
+              <h1>Bienvenidos a ITNOVAI Market</h1>
+              <p class="lead">Descubre nuestros productos increíbles</p>
+              <button id="verProductos" class="btn btn-primary">
+                Ver Productos
+              </button>
+            </div>
+            <div class="col-md-6 order-md-2">
+              <img
+                src="https://via.placeholder.com/500x300"
+                class="img-fluid"
+                alt="Imagen de héroe"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="productos py-5">
+        <div class="container">
+          <h2 class="mb-4">Productos Destacados</h2>
+          <div class="row row-cols-1 row-cols-md-3 g-4 producto-container">
+            <!-- Los productos se renderizarán aquí -->
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="bg-dark text-white py-3">
+      <div class="container">
+        <p>&copy; ITNOVAI Market 2024</p>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
