--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/mobile-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITNOVAI Marketplace</title>
     <link
@@ -18,7 +18,13 @@
     <header class="">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">ITNOVAI Market</a>
+          <a class="navbar-brand" href="#"
+            ><img
+              src="src/assets/wordmark-logo.png"
+              alt="Imagen de logo"
+              class="img-fluid"
+              width="200"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -60,7 +66,7 @@
             </div>
             <div class="col-md-6 order-md-2">
               <img
-                src="https://via.placeholder.com/500x300"
+                src="src/assets/vertical-logo.png"
                 class="img-fluid"
                 alt="Imagen de héroe"
               />
